# protolib

./: .clang-tidy  CHANGELOG.md  CMakeLists.txt  README.md  classes.html  conanfile.py  dir_000000_000003.html  dir_0974a88ae71617e36d67767e2f5b3062_dep.map  dir_0974a88ae71617e36d67767e2f5b3062_dep.md5  dir_1ae6f3a1723d1c5a98056be5e8cfa268.html  dir_1ae6f3a1723d1c5a98056be5e8cfa268.js  dir_5280ec33e0efe019e655258f927f0b9b.html  dir_5280ec33e0efe019e655258f927f0b9b_dep.map  dir_5280ec33e0efe019e655258f927f0b9b_dep.md5  dir_74d46dd14b816f65d3bfa54df9ddf165_dep.map  dir_74d46dd14b816f65d3bfa54df9ddf165_dep.md5  dir_77b2a58be153ce438f95bb62b176c0eb.html  dir_77b2a58be153ce438f95bb62b176c0eb_dep.md5  dir_941d5b4d4b1759b6bddb304046397e8f.html  dir_941d5b4d4b1759b6bddb304046397e8f.js  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_e12b622e60b69142b86639b42f6ab19a.js  dir_ec160459cdfa6eadf739b35eafc02086.html  dir_ec160459cdfa6eadf739b35eafc02086_dep.map  dir_ec160459cdfa6eadf739b35eafc02086_dep.md5  files.html  functions.html  functions_a.html  functions_d.html  functions_e.html  functions_func.html  functions_func_c.html  functions_func_d.html  functions_func_f.html  functions_func_o.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  (+116 more)
.github/workflows/: ci.yml  docs.yml  x86.yml
artifacts/: junit.xml
cmake/: protolibConfig.cmake.in
d0/d29/: classproto_1_1RxContainer.html  classproto_1_1RxContainer.js  classproto_1_1RxContainer_a13af162783447e92a0e44e240a775deb_cgraph.map  classproto_1_1RxContainer_a1b2e180fb838c06e4704724c13712107_icgraph.map  classproto_1_1RxContainer_a1b2e180fb838c06e4704724c13712107_icgraph.md5  classproto_1_1RxContainer_a1d6da44ba10df67547d25eb435059666_icgraph.map  classproto_1_1RxContainer_a1d6da44ba10df67547d25eb435059666_icgraph.md5  classproto_1_1RxContainer_a32164b9bb4d7aafb36c279431ae3ba83_cgraph.md5  (+6 more)
d1/d47/: Crc_8hpp__incl.map  (+1 more)
docker/: Dockerfile
docs/: Doxyfile  mainpage.md
html/: annotated.html  annotated_dup.js  dir_000002_000004.html  dir_000004_000009.html  dir_000005_000004.html  dir_000005_000006.html  dir_000005_000007.html  dir_000007_000006.html  dir_0974a88ae71617e36d67767e2f5b3062.html  dir_0974a88ae71617e36d67767e2f5b3062.js  dir_1ae6f3a1723d1c5a98056be5e8cfa268_dep.map  dir_1ae6f3a1723d1c5a98056be5e8cfa268_dep.md5  dir_3023c0a2bf5f8a69a2e782253c163d72.html  dir_3023c0a2bf5f8a69a2e782253c163d72_dep.map  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5280ec33e0efe019e655258f927f0b9b.js  dir_74d46dd14b816f65d3bfa54df9ddf165.html  dir_74d46dd14b816f65d3bfa54df9ddf165.js  dir_77b2a58be153ce438f95bb62b176c0eb.js  dir_77b2a58be153ce438f95bb62b176c0eb_dep.map  dir_941d5b4d4b1759b6bddb304046397e8f_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e12b622e60b69142b86639b42f6ab19a.html  dir_e12b622e60b69142b86639b42f6ab19a_dep.map  dir_e12b622e60b69142b86639b42f6ab19a_dep.md5  dir_ec160459cdfa6eadf739b35eafc02086.js  files_dup.js  functions_b.html  functions_c.html  functions_f.html  functions_func_b.html  functions_func_e.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_p.html  functions_func_u.html  (+130 more)
include/: Crc.hpp  CustomSpan.hpp  FieldEndpoint.hpp  Interface.hpp  NamedTuple.hpp  ProtocolEndpoint.hpp  ProtocolNoSysEndpoint.hpp  UniqueVariant.hpp  fs_compat.hpp  fs_posix.hpp
include/prototypes/container/: CMakeLists.txt  FieldContainer.hpp  RxContainer.hpp  TxContainer.hpp
include/prototypes/container/Tests/: CMakeLists.txt  ContainerTests.cpp  PingPongTest.cpp  Prototypes.hpp  RxContainerTest.cpp  TxContainerTest.cpp
include/prototypes/container/tests/: CMakeLists.txt  ContainerTests.cpp  PingPongTest.cpp  Prototypes.hpp  RxContainerTest.cpp  TxContainerTest.cpp
include/prototypes/field/: CMakeLists.txt  DataField.hpp  FieldFlags.hpp  FieldInfo.hpp  FieldPrototype.hpp
include/prototypes/field/Tests/: CMakeLists.txt  FieldsTests.cpp  TestFieldPrototypes.hpp  TestFields.hpp
include/prototypes/field/tests/: CMakeLists.txt  FieldsTests.cpp  TestFieldPrototypes.hpp
libraries/: CMakeLists.txt
libraries/crc/crc16Modbus/: CMakeLists.txt  Crc16Modbus.cpp  Crc16Modbus.hpp
libraries/crc/crcSoft/: CMakeLists.txt  CrcSoft..cpp  CrcSoft.hpp
libraries/interfaces/: CMakeLists.txt  Echo.cpp  Echo.hpp  UartLinux.cpp  UartLinux.hpp
profiles/: conan_profile_target
protocols/: CMakeLists.txt
protocols/exoAtlant/: CMakeLists.txt  exoAtlantProtocol.hpp
protocols/exoAtlant/tests/: CMakeLists.txt  exoAtlantProtocolTest.cpp
protocols/lacte/: CMakeLists.txt  Helpers.hpp  LacteObjects.hpp  LacteProtocol.hpp  LacteProtocolPrototype.hpp  VirtualBoard.hpp  Ymodem.cpp  Ymodem.hpp  ymodem.cpp  ymodem.hpp
protocols/lacte/objects/: ActivationTimeType.hpp  DrinkCounterType.hpp  LacteBoardErrors.hpp  LacteIdType.hpp  LacteSnType.hpp  MachineSnType.hpp  MagicWordType.hpp  McuUidType.hpp  ProductDateType.hpp  ProductShelfLifeType.hpp  ProductVolumeType.hpp  RfidDataTypes.hpp  RfidNumberType.hpp  TimeCounterType.hpp  UsageTimeType.hpp
protocols/lacte/packets/: BootAnswerType.hpp  InfoPacketType.hpp  UIDPacketType.hpp  VersionPacketType.hpp
protocols/lacte/tests/: CMakeLists.txt  LacteProtocolTest.cpp
scripts/: .releaserc.github.cjs   .releaserc.gitlab.cjs  build.sh  ci.sh  clang_tidy.sh  compute_version.sh  conan_publish.sh  coverage.sh  docs_archive.sh  doxygen_build.sh  semantic_release_real.sh  test.sh
search/: all_0.js  all_10.js  all_11.js  all_14.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_20.js  all_21.js  all_22.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_f.js  enums_0.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_12.js  enumvalues_2.js  enumvalues_4.js  (+45 more)
(+1008 files in other folders)
